# llm-commit-helper

./: .gitignore  Makefile  README.md  prompt_example.txt  pyproject.toml
.github/workflows/: publish.yml
llm_commit_helper/: __init__.py  __main__.py  cli.py  config.py  diff_engine.py  git_staged.py  output.py  submodule.py  utils.py
llm_commit_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
llm_commit_helper/formatters/: __init__.py  generic_fmt.py  python_fmt.py  verilog_fmt.py
tests/: test_config.py  test_formatters.py  test_git_staged.py  test_output.py  test_submodule.py
