[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-commit-helper"
version = "0.1.0"
description = "LLM-friendly replacement for git diff --staged"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ronan Barzic", email = "rbarzic@gmail.com" }]
keywords = ["git", "llm", "commit", "diff", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/rbarzic/llm-commit-helper"
Repository = "https://github.com/rbarzic/llm-commit-helper"

[project.scripts]
llm-commit-helper = "llm_commit_helper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_commit_helper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
